[package]
name = "yet_another_redis_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["net", "tokio-macros", "macros", "rt-multi-thread"] }
